package ar.edu.utn.frba.dds.domain.utilidades;

import ar.edu.utn.frba.dds.domain.entidades.Entidad;

public interface InformacionAdapter {
  public String obtenerInformacion(Entidad entidad);
}
