package ar.edu.utn.frba.dds.domain.utilidades;

import lombok.Getter;
import lombok.Setter;

public class Permiso {
  @Getter
  private int id;
  @Getter @Setter
  private String detalles;
}
